--- a/src/pages/inviteFriend/inviteFriend.scss
+++ b/src/pages/inviteFriend/inviteFriend.scss
@@ -23,12 +23,13 @@
     display: block;
     width: 445px;
     height: 445px;
-    margin: 0 auto 150px auto;
+    margin: 0 auto 120px auto;
   }
-  View {
+  .invite-btn {
     height: fit-content;
+    padding-bottom: 150px;
     button {
-      margin: 0 auto 150px auto;
+      margin: 40px auto;
       width: 690px;
       height: 84px;
       background-color: #5b78f9;
@@ -41,6 +42,23 @@
         font-size: 36px;
         font-weight: 500;
         color: rgba(255, 255, 255, 1);
+      }
+    }
+    .invite-back-btn {
+      background-color: white;
+      margin: 40px auto;
+      width: 678px;
+      height: 82px;
+      border-radius: 38px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border: 1px solid #5b78f9;
+      Text {
+        color: #5b78f9;
+        margin: auto;
+        font-size: 36px;
+        font-weight: 500;
       }
     }
   }
