--- a/src/pages/ledgerDetail/ledgerDetail.scss
+++ b/src/pages/ledgerDetail/ledgerDetail.scss
@@ -139,6 +139,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 70px;
   View {
     width: 690px;
     height: 84px;
